<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022 FlamingoOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- App Title -->
    <string name="device_settings_title">OnePlus Settings</string>
    <string name="device_settings_summary">Alert slider, gestures</string>

    <string name="display_title">Display</string>

    <string name="gesture_title">Gestures</string>

    <!-- Screen off Gestures : Input -->
    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
    <string name="touchscreen_gesture_haptic_feedback_title">Haptic feedback</string>
    <string name="touchscreen_gesture_haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>
    <string name="touchscreen_gesture_single_tap_title">Single tap</string>
    <string name="touchscreen_gesture_two_fingers_down_swipe_title">Swipe down with two fingers</string>
    <string name="touchscreen_gesture_up_arrow_title">Draw a \"Λ\"</string>
    <string name="touchscreen_gesture_down_arrow_title">Draw a \"V\"</string>
    <string name="touchscreen_gesture_right_arrow_title">Draw a \"&lt;\"</string>
    <string name="touchscreen_gesture_left_arrow_title">Draw a \"&gt;\"</string>
    <string name="touchscreen_gesture_letter_o_title">Draw the letter \"O\"</string>
    <string name="touchscreen_gesture_letter_m_title">Draw the letter \"M\"</string>
    <string name="touchscreen_gesture_letter_s_title">Draw the letter \"S\"</string>
    <string name="touchscreen_gesture_letter_w_title">Draw the letter \"W\"</string>

    <!-- Screen off Gestures : Actions -->
    <string name="touchscreen_gesture_action_dialog_title">Gesture action</string>
    <string name="touchscreen_gesture_action_do_nothing">Do nothing</string>
    <string name="touchscreen_gesture_action_flashlight">Toggle flashlight</string>
    <string name="touchscreen_gesture_action_camera">Open the camera</string>
    <string name="touchscreen_gesture_action_browser">Open the browser</string>
    <string name="touchscreen_gesture_action_dialer">Open the dialer</string>
    <string name="touchscreen_gesture_action_email">View your emails</string>
    <string name="touchscreen_gesture_action_messages">View your messages</string>
    <string name="touchscreen_gesture_action_play_pause_music">Play/pause music</string>
    <string name="touchscreen_gesture_action_previous_track">Play the previous music track</string>
    <string name="touchscreen_gesture_action_next_track">Play the next music track</string>
    <string name="touchscreen_gesture_action_volume_down">Lower media volume</string>
    <string name="touchscreen_gesture_action_volume_up">Raise media volume</string>
    <string name="touchscreen_gesture_action_wakeup">Wake up the device</string>
    <string name="touchscreen_gesture_action_ambient_display">Show ambient display</string>

    <!-- Vibration-->
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vibration_warning">Setting strength too high may cause permanent hardware damage</string>

    <!-- AlertSlider -->
    <string name="category_alert_slider">Alert Slider</string>
    <string name="alert_slider_bottom_title">Bottom position</string>
    <string name="alert_slider_middle_title">Middle position</string>
    <string name="alert_slider_top_title">Top position</string>
    <string name="mode_normal">Ring</string>
    <string name="mode_priority">Priority</string>
    <string name="mode_vibrate">Vibrate</string>
    <string name="mode_silent">Silent</string>
    <string name="mode_dnd">Total Silence</string>
    <string name="alert_slider_mute_media_title">Mute media</string>
    <string name="alert_slider_mute_media_summary">Mute media when switching to silent</string>

    <!-- Pop-up camera-->
    <string name="camera_title">Camera</string>
    <string name="always_on_camera_dialog_title">Front camera open dialog</string>
    <string name="always_on_camera_dialog_summary_on">Always ask before opening</string>
    <string name="always_on_camera_dialog_summary_off">Only ask when the screen is off</string>

    <!-- Dolby -->
    <string name="audio_title">Audio</string>
    <string name="dolby_title">Dolby Atmos</string>

</resources>
