<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022 FlamingoOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="alert_slider"
        android:title="@string/alert_slider"
        android:summary="@string/alert_slider_summary"
        android:persistent="false">
        <intent android:targetPackage="com.flamingo.device.alertslider"
            android:targetClass="com.flamingo.device.alertslider.SettingsActivity" />
    </Preference>

    <Preference
        android:key="audio_dolby_atmos"
        android:title="@string/dolby_title"
        android:summary="@string/dolby_summary">
        <intent
                android:targetPackage="com.oneplus.sound.tuner"
                android:targetClass="com.oneplus.sound.tuner.panoramic.DolbyPanoramicSoundActivity" />
    </Preference>

    <com.flamingo.support.preference.SystemSettingSwitchPreference
        android:key="device_setting_always_on_camera_dialog"
        android:title="@string/always_on_camera_dialog_title"
        android:summaryOff="@string/always_on_camera_dialog_summary_off"
        android:summaryOn="@string/always_on_camera_dialog_summary_on"
        android:defaultValue="0" />

    <Preference
        android:key="touchscreen_gesture_category"
        android:title="@string/touchscreen_gesture_settings_title"
        android:summary="@string/touchscreen_gesture_settings_summary"
        android:persistent="false">
        <intent android:targetPackage="com.flamingo.device.touch"
            android:targetClass="com.flamingo.device.touch.SettingsActivity" />
    </Preference>

    <com.flamingo.support.preference.SystemSettingSeekBarPreference
        android:key="device_setting_vib_strength"
        android:title="@string/vib_strength_summary_head"
        android:max="10"
        android:defaultValue="2"
        app:min="0" />

    <com.android.settingslib.widget.FooterPreference
        android:key="vibration_footer_preference"
        android:title="@string/vibration_warning"
        android:selectable="false" />
    
</PreferenceScreen>
